--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="146dp"
         android:layout_gravity="center"
         android:contentDescription="@string/coffee_house_logo"
-        app:srcCompat="@drawable/_29f271575eca1fd89abef017ee6e23e"
+        app:srcCompat="@drawable/logo"
         tools:ignore="MissingConstraints" />
     <ListView
         android:id="@+id/list_options"
